fix: alignement Méthode avec 01/Comprendre

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -816,14 +816,14 @@ main#home {
 .agence-row:nth-child(3) { min-height: 48vh; }
 
 .agence-row__title {
-  padding: calc(var(--nav-h) + 40px) 48px 80px 60px;
+  padding: 60px 48px 60px 60px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
 .agence-row__text {
-  padding: 80px 60px 100px 0;
+  padding: 60px 60px 80px 0;
   display: flex;
   flex-direction: column;
   gap: 28px;
